prevent game on mobile devices

--- a/src/components/GamePreview/GamePreview.module.css
+++ b/src/components/GamePreview/GamePreview.module.css
@@ -47,7 +47,7 @@
 }
 
 @media (max-width: 880px) {
-  .gamePreview {
+  .host {
     flex-direction: column;
 
     img.gamePreviewImg {
